# hec-fintech-hackathon

./: .env.example  .gitignore  README.md  docker-compose.yml
Lovable/: README.md  package-lock.json
Lovable/src/: App.tsx  index.css
Video/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
Video/src/: LegacyPitch.tsx  Pitch.tsx  Root.tsx
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py  routes_asset_managers.py  routes_extract.py  routes_health.py  routes_indices.py  routes_market_views.py  routes_products.py  routes_recommendations.py  routes_score.py
backend/app/core/: canonical_text.py  embeddings.py  explanation.py  faiss_store.py  matching.py  scoring.py
backend/app/data/: sample_asset_managers.json  sample_market_views.json  sample_products.json  sample_purchase_history.json
backend/app/db/: models.py  seed.py  session.py
backend/app/schemas/: asset_manager.py  extract.py  market_view.py  product.py  purchase_history.py  recommendation.py
backend/app/services/: asset_manager_service.py  index_service.py  market_view_service.py  product_service.py  recommendation_service.py
backend/app/tests/: conftest.py  test_api.py  test_canonical_text.py  test_embeddings.py  test_explanation.py  test_faiss_store.py  test_matching.py  test_recommendations_api.py  test_scoring_golden.py
backend/app/tests/fixtures/: expected_scores.json
backend/scripts/: export_mocks.ts  golden_scores.ts
frontend/: .gitignore  index.html  package.json  tailwind.config.ts
(+112 files in other folders)
